<resources>
    <string name="app_name">Scrambled Eggs</string>
    <string name="activity_scrambledeggs_random_title">Quick Scramble</string>
    <string name="activity_scrambledeggs_quiz_title">Omelette Scramble</string>
    <string name="activity_scrambledeggs_gotd_title">Game of the Day</string>
    <string name="activity_scrambledeggs_heading">GAME OF THE DAY</string>
    <string name="activity_scrambledeggs_quiz_heading">QUIZ</string>
    <string name="activity_scrambledeggs_random_heading">RANDOM GAME</string>
    <string name="label_dev">DEV:</string>
    <string name="label_pub"><b>PUB:</b></string>
    <string name="label_rel">REL:</string>
    <string name="label_genre">GENRE(S):</string>
    <string name="label_platforms">PLATFORM(S):</string>
    <string name="activity_scrambledeggs_random_btn">GENERATE</string>
    <string name="activity_game_noresult_title">No eggs in this basket</string>
    <string name="activity_game_noresult_desc">Either your perfect game doesn\'t exist, or we don\'t know it yet!</string>
    <string name="activity_scrambledeggs_quiz_length">How many questions?</string>
    <string name="activity_scrambledeggs_quiz_btn">START</string>
    <string name="activity_quiz_button_refresh">REFRESH</string>
    <string name="activity_quiz_button_next">NEXT</string>
    <string name="admob_app_id">ca-app-pub-8895623520138376~9145503020</string>
    <string name="admob_interstitial_id">ca-app-pub-8895623520138376/7678408490</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
