<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:elevation="0dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@color/toolBarColor" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/activity_scrambledeggs_heading"
                android:textAlignment="center"
                android:textColor="@color/homeTitleColor"
                android:textSize="76sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="76dp"
                app:autoSizeMinTextSize="22dp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/game_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/homeTitleColor"
                android:textSize="76sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="76dp"
                app:autoSizeMinTextSize="22dp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/game_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_dev"
                android:textColor="@color/homeTitleColor"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/game_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/game_title"
                app:layout_constraintTop_toBottomOf="@+id/game_pub" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/game_pub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_pub"
                android:textColor="@color/homeTitleColor"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/game_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/game_title"
                app:layout_constraintTop_toBottomOf="@+id/game_release" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/game_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_rel"
                android:textColor="@color/homeTitleColor"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/game_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/game_title"
                app:layout_constraintTop_toBottomOf="@+id/game_title" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/game_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_genre"
                android:textColor="@color/homeTitleColor"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/game_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/game_title"
                app:layout_constraintTop_toBottomOf="@+id/game_dev" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/game_platform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_platforms"
                android:textColor="@color/homeTitleColor"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/game_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/game_title"
                app:layout_constraintTop_toBottomOf="@+id/genre_entries" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/genre_entries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:lineSpacingExtra="3dp"
                android:scrollHorizontally="false"
                android:text=""
                android:textColor="@color/homeTitleColor"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/game_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/game_title"
                app:layout_constraintTop_toBottomOf="@+id/game_genre" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/platform_entries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:lineSpacingExtra="3dp"
                android:scrollHorizontally="false"
                android:text=""
                android:textColor="@color/homeTitleColor"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/game_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/game_title"
                app:layout_constraintTop_toBottomOf="@+id/game_platform" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
