<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="forkbomb.scrambledeggs.ScrambledEggsQuizActivity"
    tools:showIn="@layout/activity_scrambledeggs_quiz">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_scrambledeggs_quiz_heading"
        android:textAlignment="center"
        android:textColor="@color/homeTitleColor"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="175dp"
        android:layout_height="53dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorSecondary"
        android:onClick="onClick"
        android:text="@string/activity_scrambledeggs_quiz_btn"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.SeekBar
        android:id="@+id/wdg_seek"
        android:layout_width="319dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:progressTint="@color/colorSecondary"
        android:thumb="@drawable/ic_slidericon512"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        app:layout_constraintEnd_toEndOf="@+id/txt_title"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/txt_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/activity_scrambledeggs_quiz_length"
        android:textColor="@color/homeTitleColor"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/wdg_seek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title">

        <ImageView
            android:id="@+id/img_egg_1"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="199dp" />

        <ImageView
            android:id="@+id/img_egg_2"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="144dp" />

        <ImageView
            android:id="@+id/img_egg_3"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="144dp" />

        <ImageView
            android:id="@+id/img_egg_4"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="199dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <ImageView
            android:id="@+id/img_egg_5"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="90dp" />

        <ImageView
            android:id="@+id/img_egg_6"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="144dp" />

        <ImageView
            android:id="@+id/img_egg_7"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="223dp"
            tools:layout_editor_absoluteY="199dp" />

        <ImageView
            android:id="@+id/img_egg_8"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="144dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/img_egg_9"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="199dp" />

        <ImageView
            android:id="@+id/img_egg_10"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="199dp" />

        <ImageView
            android:id="@+id/img_egg_11"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="199dp" />

        <ImageView
            android:id="@+id/img_egg_12"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_blackegg512"
            tools:layout_editor_absoluteX="248dp"
            tools:layout_editor_absoluteY="144dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
