<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbarSize="5dip"
        android:scrollbarThumbVertical="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/flavor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/activity_scrambledeggs_quiz_length"
                        android:textAlignment="center"
                        android:textColor="@color/homeTitleColor"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/wdg_seek"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.gridlayout.widget.GridLayout
                        android:id="@+id/imggrid"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="32dp"
                        app:layout_constraintBottom_toTopOf="@+id/flavor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_title">

                        <ImageView
                            android:id="@+id/img_egg_1"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:layout_marginBottom="15dp"
                            android:contentDescription="an egg with a 1 on it"
                            app:layout_column="0"
                            app:layout_row="0"
                            app:srcCompat="@drawable/ic_quizegg1_512" />

                        <ImageView
                            android:id="@+id/img_egg_2"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:contentDescription="an egg with a 2 on it"
                            app:layout_column="1"
                            app:layout_row="0"
                            app:srcCompat="@drawable/ic_quizegg2_512" />

                        <ImageView
                            android:id="@+id/img_egg_3"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:contentDescription="an egg with a 3 on it"
                            app:layout_column="2"
                            app:layout_row="0"
                            app:srcCompat="@drawable/ic_quizegg3_512" />

                        <ImageView
                            android:id="@+id/img_egg_4"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:contentDescription="an egg with a 4 on it"
                            app:layout_column="3"
                            app:layout_row="0"
                            app:srcCompat="@drawable/ic_quizegg4_512" />

                        <ImageView
                            android:id="@+id/img_egg_5"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:layout_marginBottom="15dp"
                            android:contentDescription="an egg with a 5 on it"
                            app:layout_column="0"
                            app:layout_row="1"
                            app:srcCompat="@drawable/ic_quizegg5_512" />

                        <ImageView
                            android:id="@+id/img_egg_6"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:contentDescription="an egg with a 6 on it"
                            app:layout_column="1"
                            app:layout_row="1"
                            app:srcCompat="@drawable/ic_quizegg6_512" />

                        <ImageView
                            android:id="@+id/img_egg_7"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:contentDescription="an egg with a 7 on it"
                            app:layout_column="2"
                            app:layout_row="1"
                            app:srcCompat="@drawable/ic_quizegg7_512" />

                        <ImageView
                            android:id="@+id/img_egg_8"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:contentDescription="an egg with an 8 on it"
                            app:layout_column="3"
                            app:layout_row="1"
                            app:srcCompat="@drawable/ic_quizegg8_512" />

                        <ImageView
                            android:id="@+id/img_egg_9"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:contentDescription="an egg with a 9 on it"
                            app:layout_column="0"
                            app:layout_row="2"
                            app:srcCompat="@drawable/ic_quizegg9_512" />

                        <ImageView
                            android:id="@+id/img_egg_10"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:contentDescription="an egg with a 10 on it"
                            app:layout_column="1"
                            app:layout_row="2"
                            app:srcCompat="@drawable/ic_quizegg10_512" />

                        <ImageView
                            android:id="@+id/img_egg_11"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:contentDescription="an egg with an 11 on it"
                            app:layout_column="2"
                            app:layout_row="2"
                            app:srcCompat="@drawable/ic_quizegg11_512" />

                        <ImageView
                            android:id="@+id/img_egg_12"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:contentDescription="an egg with a 12 on it"
                            app:layout_column="3"
                            app:layout_row="2"
                            app:srcCompat="@drawable/ic_quizegg12_512" />


                    </androidx.gridlayout.widget.GridLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_title"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/activity_scrambledeggs_quiz_heading"
                        android:textAlignment="center"
                        android:textColor="@color/homeTitleColor"
                        android:textSize="46sp"
                        android:textStyle="bold"
                        app:autoSizeMaxTextSize="46sp"
                        app:autoSizeMinTextSize="30dp"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_start"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="175dp"
                        android:layout_height="53dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/button"
                        android:text="@string/activity_scrambledeggs_quiz_btn"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <android.widget.SeekBar
                        android:id="@+id/wdg_seek"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@null"
                        android:progress="0"
                        android:progressTint="@color/colorSecondary"
                        android:thumb="@drawable/ic_slidericon512"
                        app:layout_constraintBottom_toTopOf="@+id/btn_start"
                        app:layout_constraintEnd_toEndOf="@+id/txt_title"
                        app:layout_constraintHorizontal_bias="0.509"
                        app:layout_constraintStart_toStartOf="@+id/txt_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>